timer-focus project initiated

--- a/package.json
+++ b/package.json
@@ -2,20 +2,32 @@
   "name": "timer-focus",
   "version": "0.1.0",
   "private": true,
+  "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "expo": "^41.0.1",
+    "expo-keep-awake": "^9.1.2",
+    "expo-status-bar": "^1.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-native": "^0.64.1",
+    "react-native-paper": "^4.8.1",
+    "react-native-web": "^0.16.3",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
+  "devDependencies": {
+    "@babel/core": "~7.9.0"
+  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject"
   },
   "eslintConfig": {
     "extends": [
