--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "expo-status-bar": "^1.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-native": "^0.64.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-paper": "^4.8.1",
     "react-native-web": "^0.16.3",
     "react-scripts": "4.0.3",
